10/25/22
	Added support for 10 lines
	Added support for heavy arrows
	Added support for clock lines
	Added support for Either-Or clues
	Added test harness support to doubleDoku puzzles
	Added multiple test cases
	
10/6/22ter
	Added additional test cases

10/6/22bis
	Refactored for issue #28, so now regions are stored as (i,j) (0-base) pairs, instead of as the cellValues variables. Updated all functions that required region-based calculations (Rossini, Outside, Region Sum Lines). Specifically greatly improved implementation of Schrödinger cell region sum lines, which required building a variable index for each line. That was a poor design choice.
	
10/6/22
	Added support for scary cells
	Added support for Order Sums Cages
	Added support for parity quads (like entropic quads but for parity) and Quadro (like global entropy, but for parities)
	Added test case
	
10/2/22
	Most of the constraint additions here were inspired by Richard Stolk's Sudoku Variants Series on LMD. Thanks!
	Added support for not-RenbanLines, which supports an upgrade to the global non-consecutive functionality, allowing non-consecutive to be applied to longer strings of contiguous digits.
	Added support for anti-queen digits and cells, including partial anti-queen cells with no repeats on a single diagonal
	Updated Schrödinger cell functions and documentation.
	Added support for dominant clone regions, sets of regions where the digits in the first clone are greater than the corresponding digits in other clones.
	Added support for DoubleDoku
	Added support for capsules
	Added support for Missing Bulb Thermos, implemented for normal, slow, and OddEven thermos
	Added support for Descriptive Pairs
	Added support for Open-faced Sandwich Sums, aka Before Nine
	Added support for Missing Arrows
	Added support for Bent Diagonals
	Added support for Quad Maximum Parity Values, like Quad Max but only operating on digits of one parity. Two values, one of each parity, may be given.

9/30/22